Agregando definiciones en el diccionario de definiciones.

--- a/1_Ejemplo/EjemploTexto.html
+++ b/1_Ejemplo/EjemploTexto.html
@@ -72,22 +72,26 @@
   <!--Diccionarios de definiciones.-->
   <dl>
     <dt>SGML</dt>
-    <dd>Metalenguaje para la definición de otros lenguajes de marcado</dd>
+    <dd>Se trata de un lenguaje para marcar y describir documentos con independencia total del hardware y software utilizados. Metalenguaje o marco general para la descripción de lenguajes de marcado, particularmente aquellos usados en el
+    intercambio electrónico, manejo y publicación de documentos.</dd>
   
     <dt>XML</dt>
-    <dd>Lenguaje basado en SGML y que se emplea para describir datos</dd>
+    <dd>Lenguaje de marcado que define un conjunto de reglas para la codificación de documentos. Proporciona una plataforma para definir elementos para crear un formato y generar un lenguaje personalizado.</dd>
   
     <dt>RSS</dt>
-    <dd>Lorem Ipsum</dd>
+    <dd>Formato XML para distribuir contenido en la web. Se utiliza para difundir información actualizada frecuentemente a usuarios que se han suscrito a la fuente de contenidos.</dd>
 
     <dt>GML</dt>
+    <dd>Sublenguaje de XML descrito como una gramática en XML Schema para el modelaje, transporte y almacenamiento de información geográfica.</dd>
 
     <dt>XHTML</dt>
+    <dd>Es, básicamente, HTML expresado como XML válido. Es más estricto a nivel técnico, pero esto permite que posteriormente sea más fácil al hacer cambios o buscar errores entre otros.</dd>
 
     <dt>SVG</dt>
+    <dd>Formato de gráficos vectoriales bidimensionales, tanto estáticos como animados, en formato de lenguaje de marcado extensible XML, es decir que se compone por código y cuya especificación es un estándar abierto desarrollado por el W3C.</dd>
 
     <dt>XUL</dt>
-    <dd>Lenguajes derivados de XML para determinadas aplicaciones</dd>
+    <dd>Lenguaje basado en XML para la interfaz de usuario, desarrollado por Mozilla.</dd>
   </dl>
   <hr/>
 
